# PyReport

./: .gitignore  LICENSE  Makefile  README.md  index.html  pyproject.toml
.github/workflows/: test-and-deploy.yml
reports/25452201425/demo/: index.html
reports/25452201425/test-report/: index.html  report.json
reports/25452925769/test-report/: index.html  report.json
reports/25453564899/test-report/: index.html  report.json
reports/25454162641/test-report/: index.html  report.json
reports/25454453499/: .meta.json
reports/25454453499/test-report/: index.html  report.json
reports/25454594214/: .meta.json
reports/25454594214/test-report/: index.html  report.json
reports/25459844419/: .meta.json
reports/25459844419/demo/: history.html  index.html
reports/25459844419/test-report/: index.html
reports/25460045609/: .meta.json
reports/25460045609/demo/: history.html
reports/25460045609/test-report/: history.html  index.html
reports/25460389545/: .meta.json
reports/25460389545/demo/: history.html  index.html
reports/25460389545/test-report/: history.html  index.html
reports/25460813853/: .meta.json
reports/25460813853/demo/: history.html  index.html
reports/25460944355/: .meta.json
reports/25462547296/: .meta.json
scripts/: deploy_reports.py  generate_demo.py
src/pyreport/: __main__.py
tests/: conftest.py  test_attachments.py  test_capture.py  test_cli.py  test_flaky.py  test_grouper.py  test_history_store.py  test_html_renderer.py  test_integration.py  test_models.py  test_pytest_plugin.py  test_trends.py
(+39 files in other folders)
