[project]
name = "pyreport"
version = "0.1.0"
description = "Beautiful test report generator for pytest and beyond"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "CustomEnv" },
]
dependencies = [
    "typer>=0.12.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",  # for pyreport serve
]

[project.optional-dependencies]
pytest = ["pytest>=8.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
pyreport = "pyreport.cli.commands:app"

[project.entry-points.pytest11]
pyreport = "pyreport.parsers.pytest_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyreport"]

[tool.hatch.build]
include = [
  "src/pyreport/**/*.html",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]

[tool.coverage.run]
source = ["src/pyreport"]
